--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.7",
+    "axios": "^1.4.0",
+    "i18next": "^22.5.0",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-i18next": "^12.3.1",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.10.0",
+    "react-native-otp-textinput": "^1.0.1",
+    "react-native-paper": "^5.7.2",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.5.2",
+    "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
