--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-firebase/analytics": "^18.6.1",
+    "@react-native-firebase/app": "^18.6.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -19,18 +21,30 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.7",
+    "amazon-cognito-identity-js": "^6.3.7",
+    "aws-amplify": "^5.3.12",
+    "aws-amplify-react-native": "^7.0.8",
     "axios": "^1.4.0",
     "i18next": "^22.5.0",
+    "lottie-react-native": "^6.4.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-i18next": "^12.3.1",
     "react-native": "0.71.8",
+    "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-image-picker": "^7.0.2",
     "react-native-otp-textinput": "^1.0.1",
+    "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "^3.1.0",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "^13.14.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0"
