--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "^3.1.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.2",
