--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.7",
+    "@types/d3-shape": "^3.1.5",
     "amazon-cognito-identity-js": "^6.3.7",
     "aws-amplify": "^5.3.12",
     "aws-amplify-react-native": "^7.0.8",
     "axios": "^1.4.0",
+    "d3-shape": "^3.2.0",
     "i18next": "^22.5.0",
     "lottie-react-native": "^6.4.0",
     "moment": "^2.29.4",
@@ -34,11 +36,13 @@
     "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.10.0",
     "react-native-image-picker": "^7.0.2",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-otp-textinput": "^1.0.1",
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "^3.1.0",
     "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-redash": "^18.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.2",
