--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "aws-amplify-react-native": "^7.0.8",
     "axios": "^1.4.0",
     "i18next": "^22.5.0",
-    "lottie-react-native": "^6.4.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-i18next": "^12.3.1",
@@ -35,8 +34,8 @@
     "react-native-gesture-handler": "^2.10.0",
     "react-native-image-picker": "^7.0.2",
     "react-native-otp-textinput": "^1.0.1",
-    "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.7.2",
+    "react-native-photoeditorsdk": "^3.0.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-responsive-screen": "^1.4.2",
