--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-i18next": "^12.3.1",
     "react-native": "0.71.8",
     "react-native-config": "^1.5.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.10.0",
     "react-native-image-picker": "^7.0.2",
     "react-native-otp-textinput": "^1.0.1",
