working on user profile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
     "markdown",
     "react-native"
   ],
-  "eslint.lintTask.enable": true
+  "eslint.lintTask.enable": true,
+  "java.compile.nullAnalysis.mode": "disabled"
 }
