--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-svg": "^13.14.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^3.8.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0"
   },
