--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
+    "react-native-share": "^10.0.2",
     "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^13.14.0",
     "react-native-tab-view": "^3.5.2",
