--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-view-shot": "^3.8.0",
     "react-redux": "^8.0.5",
+    "reanimated-color-picker": "^3.0.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
