--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/netinfo": "^11.2.1",
     "@react-native-firebase/analytics": "^18.6.1",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
@@ -26,14 +27,17 @@
     "aws-amplify": "^5.3.12",
     "aws-amplify-react-native": "^7.0.8",
     "axios": "^1.4.0",
+    "formik": "^2.4.5",
     "i18next": "^22.5.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-i18next": "^12.3.1",
     "react-native": "0.71.8",
     "react-native-config": "^1.5.1",
+    "react-native-date-picker": "^4.3.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.0.2",
     "react-native-otp-textinput": "^1.0.1",
     "react-native-paper": "^5.7.2",
@@ -52,7 +56,8 @@
     "react-native-view-shot": "^3.8.0",
     "react-redux": "^8.0.5",
     "reanimated-color-picker": "^3.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
