--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
@@ -40,6 +41,7 @@
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.0.2",
     "react-native-otp-textinput": "^1.0.1",
+    "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.7.2",
     "react-native-photoeditorsdk": "^3.0.0",
     "react-native-reanimated": "^3.1.0",
@@ -50,6 +52,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-share": "^10.0.2",
     "react-native-size-matters": "^0.4.2",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^13.14.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0",
