--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@shopify/react-native-skia": "^0.1.239",
     "@tanstack/react-query": "^4.29.7",
     "amazon-cognito-identity-js": "^6.3.7",
     "aws-amplify": "^5.3.12",
