woroking on user profile and api integration

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "aws-amplify": "^5.3.12",
     "aws-amplify-react-native": "^7.0.8",
     "axios": "^1.4.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "formik": "^2.4.5",
     "i18next": "^22.5.0",
     "moment": "^2.29.4",
+    "moti": "^0.27.5",
     "react": "18.2.0",
     "react-i18next": "^12.3.1",
     "react-native": "0.71.8",
@@ -41,6 +43,7 @@
     "react-native-gesture-handler": "^2.10.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.0.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-otp-textinput": "^1.0.1",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.7.2",
@@ -66,6 +69,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
+    "@babel/preset-react": "^7.23.3",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
