--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-i18next": "^12.3.1",
     "react-native": "0.71.8",
+    "react-native-actions-sheet": "^0.9.2",
     "react-native-config": "^1.5.1",
     "react-native-date-picker": "^4.3.5",
     "react-native-fs": "^2.20.0",
