--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "android:release": "cd android && ./gradlew clean && ./gradlew assembleRelease",
     "test": "jest"
   },
   "dependencies": {
