--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-gesture-handler": "^2.10.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.0.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-otp-textinput": "^1.0.1",
     "react-native-pager-view": "^6.2.3",
